--- a/BIT-thesis-template-grd/demo.tex
+++ b/BIT-thesis-template-grd/demo.tex
@@ -8,7 +8,7 @@
 
 % 默认单面打印 oneside 、硕士论文模板 master
 
-\documentclass[twoside, master]{BIT-thesis-grd}
+\documentclass[oneside, master]{BIT-thesis-grd}
 % 模板选项： 硕士论文 master； 博士论文 doctor
 
 %==============更改数学字体设置，Latin Modern Math 默认的的确有点细，看个人需要，下面提供一种方法，需要的可以取消注释=========%
