--- a/BIT-thesis-template-grd/BIT-thesis-grd.cls
+++ b/BIT-thesis-template-grd/BIT-thesis-grd.cls
@@ -93,9 +93,9 @@
 \def\BIT@label@authorsign{签\qquad 名：}
 \def\BIT@label@Supervisorsign{导师签名：}
 \def\BIT@label@originalDate{日期：}
-\def\BIT@label@originalcontent{\BITspace\BITspace 本人郑重声明：所提交的学位论文是我本人在指导教师的指导下独立完成的研究成果。文中所撰写内容符合以下学术规范（请勾选）：\par $\square$ 论文综述遵循“适当引用”的规范，全部引用的内容不超过50\%。\par $\square$ 论文中的研究数据及结果不存在篡改、剽窃、抄袭、伪造等学术不端行为，并愿意承担因学术不端行为所带来的一切后果和法律责任。\par $\square$ 文中依法引用他人的成果，均已做出明确标注或得到许可。\par $\square$ 论文内容未包含法律意义上已属于他人的任何形式的研究成果，也不包含本人已用于其他学位申请的论文或成果。\par $\square$ 与本人一同工作的合作者对此研究工作所做的任何贡献均已在学位论文中作了明确的说明并表示了谢意。\par 特此声明。}
+\def\BIT@label@originalcontent{\BITspace\BITspace 本人郑重声明：所提交的学位论文是我本人在指导教师的指导下独立完成的研究成果。文中所撰写内容符合以下学术规范（请勾选）：\par $\square$ 论文综述遵循“适当引用”的规范，全部引用的内容不超过50\%。\par $\square$ 论文中的研究数据及结果不存在篡改、剽窃、抄袭、伪造等学术不端行为，并愿意承担因学术不端行为所带来的一切后果和法律责任。\par $\square$ 文中依法引用他人的成果，均已做出明确标注或得到许可。\par $\square$ 论文内容未包含法律意义上已属于他人的任何形式的研究成果，也不包含本人已用于其他学位申请的论文或成果。\par $\square$ 与本人一同工作的合作者对此研究工作所做的任何贡献均已在学位论文中作了明确的说明并表示了谢意。\par 特此声明。\par}
 \def\BIT@label@authorizationcontent{\BITspace\BITspace 本人完全了解北京理工大学有关保管、使用学位论文的规定，其中包括：\par \circled{1} 学校有权保管、并向有关部门送交学位论文的原件与复印件；\par \circled{2} 学校可以采用影印、缩印或其它复制手段复制并保存学位论文；\par \circled{3} 学校可允许学位论文被查阅或借阅；\par \circled{4} 学校可以学术交流为目的,复制赠送和交换学位论文；
-\par \circled{5} 学校可以公布学位论文的全部或部分内容（保密学位论文在解密后遵守此规定）。}
+\par \circled{5} 学校可以公布学位论文的全部或部分内容（保密学位论文在解密后遵守此规定）。\par}
 
 
 %%
